--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -150,7 +150,7 @@ jobs:
         uses: actions/checkout@v4
 
       -
-        name: Checkout ${{ github.repository }}, branch 'docker-library', path '${{ inputs.version_major }}'
+        name: Checkout ${{ github.repository }}, branch '${{ inputs.version_major }}', path '${{ inputs.version_major }}'
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.version_major }}
@@ -352,6 +352,19 @@ jobs:
             cat ${dockerfile}
           done
 
+      -
+        name: "Prepare time stamp"
+        id: time_stamp
+        run: |
+          # time stamp
+          time_stamp=$(date -u '+%H:%M:%S')
+          echo "time_stamp=${time_stamp}" >> $GITHUB_ENV
+          echo "time_stamp=${time_stamp}" >> "$GITHUB_OUTPUT"
+          [ -z "$time_stamp-x" ] && false
+
+          # [Debug]
+          echo "time_stamp=${time_stamp}"
+
       # Commit '${version_major}/${image_types}/${arch}/*'
       -
         name: "Commit and push ${{ matrix.image_types }}/*/* Dockerfile and RootFS (branch ${{ inputs.version_major }})"
@@ -363,5 +376,67 @@ jobs:
           new_branch: ${{ inputs.version_major }}
           cwd: ${{ inputs.version_major }}
           pull: '--rebase --autostash'
-          message: "AlmaLinux ${{ inputs.version_major }} ${{ matrix.image_types }} image built as of ${{ env.date_stamp }} (generated on ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})."
+          message: "AlmaLinux ${{ inputs.version_major }} ${{ matrix.image_types }} - ${{ env.date_stamp }} ${{ env.time_stamp }} (generated on ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})."
           push: true
+
+    outputs:
+      date_stamp: ${{ steps.date_stamp.outputs.date_stamp }}
+      time_stamp: ${{ steps.time_stamp.outputs.time_stamp }}
+
+  optimize-repo-size:
+    # 'default' or 'minimal' images only and 'Push to production' is checked
+    if: ( inputs.type_default || inputs.type_minimal ) && inputs.production
+    name: Optimize ${{ github.repository }} size of the branch '${{ inputs.version_major }}'
+    runs-on: ubuntu-latest
+    needs:
+      - build-test-push
+    steps:
+
+      -
+        name: Checkout ${{ github.repository }}, branch '${{ inputs.version_major }}', path '${{ inputs.version_major }}'
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.version_major }}
+          path: ${{ inputs.version_major }}
+
+      -
+        name: Optimize size of branch the '${{ inputs.version_major }}'
+        run: |
+          date_stamp=${{ needs.build-test-push.outputs.date_stamp }}
+          cd ${{ inputs.version_major }}
+
+          echo "Prepare new branch 'tmp' based on ${{ inputs.version_major }}"
+          git checkout -b tmp
+
+          echo "Delete local branch '${{ inputs.version_major }}'"
+          git branch -D ${{ inputs.version_major }}
+
+          echo "Preserve resent data"
+          mkdir ../tmp-${date_stamp}
+
+          mv ./default ../tmp-${date_stamp}/
+          mv ./minimal ../tmp-${date_stamp}/
+
+          echo "Crete orphan branch '${{ inputs.version_major }}'"
+          git checkout --orphan ${{ inputs.version_major }}
+
+          echo "Clean up"
+          git rm --cached -r .
+          rm -rf ./default
+          rm -rf ./minimal
+
+          echo "Restore resent data"
+          mv ../tmp-${date_stamp}/default ./
+          mv ../tmp-${date_stamp}/minimal ./
+
+          echo "[Debug]"
+          git status
+
+      -
+        name: Commit and push ${{ github.repository }}, branch '${{ inputs.version_major }}'
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: user_info
+          message: "Update AlmaLinux ${{ inputs.version_major }} - ${{ needs.build-test-push.outputs.date_stamp }} ${{ needs.build-test-push.outputs.time_stamp }} (generated on ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})."
+          push: '--force --set-upstream origin ${{ inputs.version_major }}'
+          cwd: ${{ inputs.version_major }}
