--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -66,7 +66,7 @@ env:
 jobs:
   build-test-push:
     name: Deploy ${{ inputs.version_major }} ${{ matrix.image_types }} images
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
@@ -209,17 +209,43 @@ jobs:
             type=raw,value=${{ inputs.version_major }}${{ env.version_minor }}-${{ env.date_stamp }},enable=true
 
       -
-        name: Build images
+        name: Build images and push to Client Library
         id: build-images
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           provenance: false
           context: "{{defaultContext}}:Containerfiles/${{ inputs.version_major }}"
           file: ./Containerfile.${{ matrix.image_types }}
           platforms: ${{ env.platforms }}
-          push: false
-          load: true
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
+
+      -
+        name: Prepare pull tag
+        # The tag is used to pull images from selected registry
+        id: prepare-tag
+        run: |
+          REGISTRIES="${{ env.registries }}"
+          for REGISTRY in ${REGISTRIES//,/ }; do
+            # Take the first registry if not default image
+            [ "${{ matrix.image_types }}" != "default" ] && break
+
+            # Take any registry except 'docker.io' if default image
+            [[ $REGISTRY != *'docker.io'* ]] && break
+
+            unset REGISTRY
+          done
+          [ "x${REGISTRY}" = "x" ] && exit 1
+
+          # 'default' images goes to $REGISTRY/almalinux
+          [ "${{ matrix.image_types }}" = "default" ] \
+            && IMAGE_NAME="$REGISTRY/almalinux" \
+            || IMAGE_NAME="$REGISTRY/${{ inputs.version_major }}-${{ matrix.image_types }}"
+
+          PULL_TAG="${IMAGE_NAME}:${{ inputs.version_major }}${{ env.version_minor }}-${{ env.date_stamp }}"
+
+          echo "[Debug] ${PULL_TAG}"
+          echo "PULL_TAG=${PULL_TAG}" >> $GITHUB_ENV
 
       -
         name: Test images
@@ -230,23 +256,13 @@ jobs:
           for platform in ${platforms//,/ }; do
             echo "Testing AlmaLinux ${{ inputs.version_major }} ${{ matrix.image_types }} for ${platform} image:"
 
-            docker run --platform=${platform} ${{ steps.build-images.outputs.digest }} /bin/bash -c " \
+            docker pull --platform=${platform} ${{ env.PULL_TAG }}
+
+            docker run --platform=${platform} ${{ env.PULL_TAG }} /bin/bash -c " \
             uname -m \
             && cat /etc/almalinux-release \
             && ( test "${{ matrix.image_types }}" != "micro" && rpm -q gpg-pubkey) || true "
           done
-
-      -
-        name: Push images to Client Library
-        id: push-images
-        uses: docker/build-push-action@v5
-        with:
-          provenance: false
-          context: "{{defaultContext}}:Containerfiles/${{ inputs.version_major }}"
-          file: ./Containerfile.${{ matrix.image_types }}
-          platforms: ${{ env.platforms }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
 
       -
         name: Extract RootFS (default and minimal only)
@@ -270,7 +286,7 @@ jobs:
           cd ${path}
 
           # Produce a tarred repository and save it to the "tar file".
-          docker save ${{ steps.build-images.outputs.digest }} -o ${tar_name}
+          docker save ${{ env.PULL_TAG }} -o ${tar_name}
 
           # Extract the "tar file"
           tar xf ${tar_name}
@@ -397,7 +413,7 @@ jobs:
     # 'default' or 'minimal' images only and 'Push to production' is checked
     if: ( inputs.type_default || inputs.type_minimal ) && inputs.production
     name: Optimize size of repository
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - build-test-push
     steps:
