--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -66,7 +66,7 @@ env:
 jobs:
   build-test-push:
     name: Deploy ${{ inputs.version_major }} ${{ matrix.image_types }} images
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
@@ -142,9 +142,11 @@ jobs:
       -
         name: Enable containerd image store on Docker Engine
         run: |
-          # Use containerd image store
-          sudo jq '.features |= . + { "containerd-snapshotter": true }' /etc/docker/daemon.json > ./daemon.json.${{ env.date_stamp }} && \
-          sudo mv -f ./daemon.json.${{ env.date_stamp }} /etc/docker/daemon.json
+          # JQ file to switch into containerd image store
+          cat << EOF > containerd-snapshotter.jq
+          .features |= . + { "containerd-snapshotter": true }
+          EOF
+          sudo jq -n -f containerd-snapshotter.jq > /etc/docker/daemon.json
           sudo systemctl restart docker
           docker info -f '{{ .DriverStatus }}'
 
@@ -397,7 +399,7 @@ jobs:
     # 'default' or 'minimal' images only and 'Push to production' is checked
     if: ( inputs.type_default || inputs.type_minimal ) && inputs.production
     name: Optimize size of repository
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - build-test-push
     steps:
