AlmaLinux release 10.0: use quay.io/almalinuxautobot/almalinux:10 as base for images building
CI: add AlmaLinux release 10.0 images to build on schedule

--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -66,7 +66,7 @@ env:
   # List of versions to build on schedule
   # TODO: add 10 when it is released
   # Kitten should not be built on schedule
-  versions_list: '"8", "9"'
+  versions_list: '"8", "9", "10"'
 
   # List image types to build on schedule
   image_types: '"default", "minimal", "micro", "base", "init"'
