--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -193,7 +193,7 @@ jobs:
             [[ "${{ matrix.version_major }}" =~ "10" ]] && \
               platforms="linux/amd64/v2, ${platforms}"
             [[ "${{ matrix.version_major }}" =~ "9" ]] && \
-              platforms="linux/i386, ${platforms}"
+              platforms="linux/386, ${platforms}"
             echo "platforms=${platforms}" >> $GITHUB_ENV
 
             # Registries
@@ -333,7 +333,7 @@ jobs:
           for platform in ${platforms//,/ }; do
             echo "Testing AlmaLinux ${{ matrix.version_major }} ${{ matrix.image_types }} for ${platform} image:"
 
-            # TODO: machine hardware name is x86_64 on linux/i386 platform
+            # TODO: machine hardware name is x86_64 on linux/386 platform
             docker run --platform=${platform} ${{ steps.build-images.outputs.digest }} /bin/bash -c " \
             uname -m \
             && cat /etc/almalinux-release \
@@ -426,7 +426,7 @@ jobs:
               docker rmi rootfs
               case ${arch} in
                 i686)
-                  platform=i386;;
+                  platform=386;;
                 x86_64)
                   platform=amd64;;
                 x86_64_v2)
