Rename 32-bit images place-holder into linux/386

--- a/default/386/Dockerfile
+++ b/default/386/Dockerfile
@@ -1,5 +1,5 @@
 # Tags: latest, 9, 9.6, 9.6-20250610
 FROM scratch
-ADD almalinux-9-default-i386.tar.xz /
+ADD almalinux-9-default-386.tar.xz /
 
 CMD ["/bin/bash"]
