--- a/minimal/386/Dockerfile
+++ b/minimal/386/Dockerfile
@@ -1,5 +1,5 @@
 # Tags: minimal, 9-minimal, 9.6-minimal, 9.6-minimal-20250610
 FROM scratch
-ADD almalinux-9-minimal-i386.tar.xz /
+ADD almalinux-9-minimal-386.tar.xz /
 
 CMD ["/bin/bash"]
