AlmaLinux 8 linux/i386 images: - temporary use quay.io/almalinuxautobot/almalinux:8 as SYSBASE - use ARG TARGETPLATFORM - switch into baseurl and hardcode $basearch into i386 if TARGETPLATFORM is linux/i386
CI:
- add linux/i386 to the platforms list if AlmaLinux 8

--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -190,10 +190,12 @@ jobs:
         run: |
             # Platforms
             platforms="${{ env.platforms }}"
-            [[ "${{ matrix.version_major }}" =~ "10" ]] && \
-              platforms="linux/amd64/v2, ${platforms}"
-            [[ "${{ matrix.version_major }}" =~ "9" ]] && \
-              platforms="linux/386, ${platforms}"
+            case ${{ matrix.version_major }} in
+              8|9)
+                platforms="linux/386, ${platforms}" ;;
+              10*)
+                platforms="linux/amd64/v2, ${platforms}" ;;
+            esac
             echo "platforms=${platforms}" >> $GITHUB_ENV
 
             # Registries
