--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -58,7 +58,7 @@ on:
           type: boolean
           default: true
 
-        type_tool:
+        type_toolbox:
           description: 'toolbox'
           required: true
           type: boolean
