--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,15 @@ name: Release Container Images (scriptless)
 on:
   push:
     tags:
-      - "v*.*"         # 例: v9.0.20250919.0 / v10.0.20250919.0
+      - "v*.*"
   workflow_dispatch:
 
 permissions:
-  contents: write      # Release 作成に必要
+  contents: write
+
+concurrency:
+  group: release-${{ github.workflow }}-${{ github.ref }}-${{ github.run_id }}
+  cancel-in-progress: false
 
 jobs:
   release:
@@ -34,8 +38,8 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          TAG="${GITHUB_REF##*/}"                          # v9.0.x / v10.0.x
-          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"  # 9 / 10
+          TAG="${GITHUB_REF##*/}"
+          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"
           PREV="$((REL-1))"
           echo "tag=$TAG"   >> "$GITHUB_OUTPUT"
           echo "rel=$REL"   >> "$GITHUB_OUTPUT"
@@ -49,7 +53,6 @@ jobs:
           flavor='${{ matrix.flavor }}'
           file="Containerfiles/$rel/Containerfile.$flavor"
           tag="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
-
           docker build -f "$file" -t "$tag" .
           mkdir -p "sbom/$rel"
           syft "docker:$tag" -o json > "sbom/$rel/$flavor.json"
@@ -62,12 +65,10 @@ jobs:
           prev='${{ steps.ver.outputs.prev }}'
           flavor='${{ matrix.flavor }}'
           oldfile="Containerfiles/$prev/Containerfile.$flavor"
-
           if [[ ! -f "$oldfile" ]]; then
             echo "has_old=false" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-
           oldtag="almalinux${prev}-${flavor}:__old__"
           docker build -f "$oldfile" -t "$oldtag" .
           mkdir -p "sbom/$prev"
@@ -83,38 +84,28 @@ jobs:
           flavor='${{ matrix.flavor }}'
           NEW="sbom/$rel/$flavor.json"
           OLD="sbom/$prev/$flavor.json"
-
           if [[ ! -f "$NEW" ]]; then
-            echo "NEW SBOM missing: $NEW" >&2
-            exit 1
+            echo "NEW SBOM missing: $NEW" >&2; exit 1
           fi
-
           if [[ '${{ steps.oldsbom.outputs.has_old }}' != 'true' || ! -f "$OLD" ]]; then
             {
               echo "# Initial Release: AlmaLinux $rel ($flavor)"
-              echo
-              echo "- SBOM: \`$NEW\`"
+              echo; echo "- SBOM: \`$NEW\`"
               echo "- Packages: \`$(jq -r '.artifacts | length' "$NEW" 2>/dev/null || echo "n/a")\`"
-              echo
-              echo "No previous version to diff against."
+              echo; echo "No previous version to diff against."
             } > "RELEASE_CHANGELOG-${flavor}.md"
             exit 0
           fi
-
           jq -r '.artifacts[]?|"\(.name) \(.version)"' "$OLD" | sort > /tmp/old.txt
           jq -r '.artifacts[]?|"\(.name) \(.version)"' "$NEW" | sort > /tmp/new.txt
           cut -d' ' -f1 /tmp/old.txt | sort -u > /tmp/old.names
           cut -d' ' -f1 /tmp/new.txt | sort -u > /tmp/new.names
-
           ADDED_NAMES=$(comm -13 /tmp/old.names /tmp/new.names || true)
           REMOVED_NAMES=$(comm -23 /tmp/old.names /tmp/new.names || true)
           UPDATED=$(
-            join -j1 -o 1.1,1.2,2.2 \
-              <(sort /tmp/old.txt) \
-              <(sort /tmp/new.txt) \
-            | awk '$2 != $3 {print $1" " $2 " -> " $3}' || true
+            join -j1 -o 1.1,1.2,2.2 <(sort /tmp/old.txt) <(sort /tmp/new.txt) |
+            awk '$2 != $3 {print $1" " $2 " -> " $3}' || true
           )
-
           {
             echo "# Changelog: AlmaLinux $prev → $rel ($flavor)"
             echo
@@ -122,19 +113,13 @@ jobs:
             echo "SBOM(new): \`$NEW\`"
             echo
             echo "## Updated Packages"
-            echo '```'
-            [[ -n "$UPDATED" ]] && echo "$UPDATED" || echo "(none)"
-            echo '```'
+            echo '```'; [[ -n "$UPDATED" ]] && echo "$UPDATED" || echo "(none)"; echo '```'
             echo
             echo "## Added Packages"
-            echo '```'
-            [[ -n "$ADDED_NAMES" ]] && echo "$ADDED_NAMES" || echo "(none)"
-            echo '```'
+            echo '```'; [[ -n "$ADDED_NAMES" ]] && echo "$ADDED_NAMES" || echo "(none)"; echo '```'
             echo
             echo "## Removed Packages"
-            echo '```'
-            [[ -n "$REMOVED_NAMES" ]] && echo "$REMOVED_NAMES" || echo "(none)"
-            echo '```'
+            echo '```'; [[ -n "$REMOVED_NAMES" ]] && echo "$REMOVED_NAMES" || echo "(none)"; echo '```'
           } > "RELEASE_CHANGELOG-${flavor}.md"
 
       - name: Merge changelogs for release body
